Fix: Menu is now utilizable on mobile

--- a/toudoum/src/assets/styles/main.scss
+++ b/toudoum/src/assets/styles/main.scss
@@ -8,3 +8,12 @@
         background: var(--v-primary-base);
     }
 }
+
+.marginTop {
+    margin-top: 72px;
+}
+
+.container.marginTop {
+    width: calc(100vw - 56px);
+    overflow-x: hidden;
+}
